Working on GV/Translation parts of talk now.

--- a/paper/presentation.tex
+++ b/paper/presentation.tex
@@ -251,7 +251,7 @@ consideration over representation choices.
 \end{frame}
 
 \begin{frame}
-\oldframetitle{Preliminaries}
+\ftitle{Preliminaries}{2}
 \begin{itemize}
 \item Locally Nameless
   \begin{itemize}
@@ -544,7 +544,11 @@ commuting conversions.
 \subsection{GV}
 
 \begin{frame}
-GV is similar
+\ftitle{GV}{3.5}
+\begin{itemize}
+\item GV similar to CP (types, terms, well-typed relation, $\ldots$)
+\item Representation choices (Kindedness, Sessions)
+\end{itemize}
 \note{
 
 Typing rules again? Very similar to CP.\\~\\
@@ -558,6 +562,7 @@ value of type T along a channel N of type !T.S.
 \subsection{Translation}
 
 \begin{frame}
+\ftitle{Translation from GV to CP}{3}
 something about a translation
 
 \note{
